--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -11,7 +11,7 @@ body {
   font-size: 0.12rem;
   line-height: 1.5;
   color: #333;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   height: 100%;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch
